Fixed images on landing page not showing up

--- a/src/app/select-board-type/select-board-type.component.scss
+++ b/src/app/select-board-type/select-board-type.component.scss
@@ -20,7 +20,7 @@
 .board-container{
   padding: 40px;
   display: flex;
-  flex: auto;
+  flex: 1;
   justify-content: center;
 }
 
